Weather Api Test added

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <li><a href="week7/lazyload.html">Progressive Loading of Images</a></li>
                 <li><a href="week8/tablebuild.html">Table Build</a></li>
                 <li><a href="Week9/prophets.html">Latter-day Prophets</a></li>
+                <li><a href="Week10/weather-api.html">Weather Api Test</a></li>
             </ul>
         </section>
     </main>
