Home Page Weather Section updated

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -70,14 +70,15 @@
                 <img src="images/weather250.webp" alt="Weather image">
             </picture>
             <div id="weather" class="positionchild">
+                <img id="weather-icon">
                 <div>
-                    <h3><span id="grades">49</span>°F</h3>
-                    <p><b>Partly Cloud</b></p>
+                    <h3><span id="grades"></span>°F</h3>
+                    <p id="weather-description"></p>
                 </div>
                 <div>
                     <hr>
-                    <p><b>Wind Speed:</b> <span id="wind-speed">4</span>mph</p>
-                    <p><b>Wind Chill:</b> <span id="wind-chill">N/A</span></p>
+                    <p><b>Wind Speed:</b> <span id="wind-speed"></span>mph</p>
+                    <p><b>Wind Chill:</b> <span id="wind-chill"></span></p>
                 </div>
             </div>
         </section>
