--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li>Week 07: <a href="chamber/discover.html">Discover Page</a></li>
                     <li>Week 08: <a href="chamber/join.html">Join Page</a></li>
                     <li>Week 09: <a href="chamber/directory.html">Directory Page</a></li>
-                    <li>Week 10: <a href="#">Title</a></li>
+                    <li>Week 10: <a href="chamber/index.html">Home Page: Weather updated</a></li>
                     <li>Week 11: <a href="#">Title</a></li>
                 </ul>
             </div>
