--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -101,6 +101,7 @@
         </div>
     </footer>
     <script src="scripts/main.js"></script>
+    <script src="scripts/visits.js"></script>
 </body>
 
 </html>
