--- a/chamber/join.html
+++ b/chamber/join.html
@@ -35,7 +35,7 @@
             </div>
             <nav>
                 <ul class="navigation">
-                    <li><a id="menu" href="#"></a></li>
+                    <li><a id="menu"></a></li>
                     <li><a href="discover.html">Discover</a></li>
                     <li><a href="directory.html">Directory</a></li>
                     <li><a href="join.html"><b>Join</b></a></li>
@@ -56,7 +56,7 @@
                 Last Name
                 <input type="text" name="last-name" id="last-name" required>
             </label>
-            <label for="title"> <!-- faltaaaa -->
+            <label for="title">
                 Title/Position
                 <input type="text" name="title" id="title" minlength="7" pattern="[Aa-Zz- ]">
             </label>
@@ -79,7 +79,7 @@
             <table>
                 <thead>
                     <tr>
-                        <th></th>
+                        <td></td>
                         <th scope="col">NP</th>
                         <th scope="col">Bronze</th>
                         <th scope="col">Silver</th>
@@ -116,24 +116,24 @@
                         <td>$30</td>
                     </tr>
                     <tr>
-                        <th ></th>
+                        <td></td>
                         <td>
-                            <label for="option1">
+                            <label for="option1">Join
                                 <input type="radio" name="membership-level" value="non-profit" id="option1" required>
                             </label>
                         </td>
                         <td>
-                            <label for="option2">
+                            <label for="option2">Join
                                 <input type="radio" name="membership-level" value="bronze" id="option2">
                         </label>
                         </td>
                         <td>
-                            <label for="option3">
+                            <label for="option3">Join
                                 <input type="radio" name="membership-level" value="silver" id="option3">
                             </label>
                         </td>
                         <td>
-                            <label for="option4">
+                            <label for="option4">Join
                                 <input type="radio" name="membership-level" value="gold" id="option4">
                             </label>
                         </td>
