Complete page improved

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -35,7 +35,7 @@
             </div>
             <nav>
                 <ul class="navigation">
-                    <li><a id="menu" href="#"></a></li>
+                    <li><a id="menu"></a></li>
                     <li><a href="discover.html"><b>Discover</b></a></li>
                     <li><a href="directory.html">Directory</a></li>
                     <li><a href="join.html">Join</a></li>
@@ -49,31 +49,31 @@
         <h2>Meet Buenos Aires, Argentina!</h2>
         <div class="positionparent">
             <picture>
-                <img src="imagesDiscover/placeholder.jpg" data-src="imagesDiscover/obelisco2-550.jpg" alt="Obelisco Argentino at nigth" width="550">
+                <img src="imagesDiscover/placeholder.jpg" data-src="imagesDiscover/obelisco2-550.webp" alt="Obelisco Argentino at nigth" width="550">
             </picture>
             <p class="positionchild description">Obelisco in Argentina. Every big celebration occurs here!</p>
         </div>
         <div class="positionparent">
         <picture>
-                <img src="imagesDiscover/placeholder.jpg" data-src="imagesDiscover/mar-del-plata550.jpg" alt="Mar del Plata" width="550">
+                <img src="imagesDiscover/placeholder.jpg" data-src="imagesDiscover/mar-del-plata550.webp" alt="Mar del Plata" width="550">
             </picture>
             <p class="positionchild description">Mar del Plata Beach. Beautiful in Summer but also in Winter.</p>
         </div>
         <div class="positionparent">
             <picture>
-                <img src="imagesDiscover/placeholder.jpg" data-src="imagesDiscover/el-caminito550.jpg" alt="La Boca, El Caminito" width="550">
+                <img src="imagesDiscover/placeholder.jpg" data-src="imagesDiscover/el-caminito550.webp" alt="La Boca, El Caminito" width="550">
             </picture>
             <p class="positionchild description">El Caminito. So many things to see!</p>
         </div>
         <div class="positionparent">
             <picture>
-                <img src="imagesDiscover/placeholder.jpg" data-src="imagesDiscover/puerto-madero550.jpg" alt="Puerto Madero" width="550">
+                <img src="imagesDiscover/placeholder.jpg" data-src="imagesDiscover/puerto-madero550.webp" alt="Puerto Madero" width="550">
             </picture>
             <p class="positionchild description">Puerto Madero. Cinemas, restaurants and a beautiful view!</p>
         </div>
         <div class="positionparent">
             <picture>
-                <img src="imagesDiscover/placeholder.jpg" data-src="imagesDiscover/tigre550.jpg" alt="Tigre" width="550">
+                <img src="imagesDiscover/placeholder.jpg" data-src="imagesDiscover/tigre550.webp" alt="Tigre" width="550">
             </picture>
             <p class="positionchild description">Tigre. Have fun and enjoy the view!</p>
         </div>
