--- a/chamber/index.html
+++ b/chamber/index.html
@@ -35,7 +35,7 @@
             </div>
             <nav>
                 <ul class="navigation">
-                    <li><a id="menu" href="#"></a></li>
+                    <li><a id="menu"></a></li>
                     <li><a href="discover.html">Discover</a></li>
                     <li><a href="directory.html">Directory</a></li>
                     <li><a href="join.html">Join</a></li>
@@ -48,15 +48,15 @@
     <main id="home">
         <section class="positionparent">
             <picture>
-                <source srcset="images/wdd230-org550.jpg" media="(max-width: 526px)">
-                <source srcset="images/wdd230-org800.jpg" media="(max-width: 830px)">
-                <img src="images/wdd230-org500.jpg" alt="Obelisco Argentino">
+                <source srcset="images/obelisco550.webp" media="(max-width: 526px)">
+                <source srcset="images/obelisco800.webp" media="(max-width: 830px)">
+                <img src="images/obelisco500.webp" alt="Obelisco Argentino">
             </picture>
-            <button class="joinus" type="button"><a href="join.html">Join Us</a></button>
+            <a href="join.html" class="joinus">Join Us</a>
         </section>
         <section class="positionparent">
             <picture>
-                <source srcset="images/empanadas550.jpg" media="(max-width: 830px)">
+                <source srcset="images/empanadas550.webp" media="(max-width: 830px)">
                 <img src="images/empanadas250.jpg" alt="Argentinian Empanadas">
             </picture>
             <div id="event" class="positionchild">
@@ -70,7 +70,7 @@
                 <img src="images/weather250.webp" alt="Weather image">
             </picture>
             <div id="weather" class="positionchild">
-                <img id="weather-icon">
+                <div id="weather-icon"></div>
                 <div>
                     <h3><span id="grades"></span>°F</h3>
                     <p id="weather-description"></p>
@@ -84,9 +84,9 @@
         </section>
         <section class="positionparent">
             <picture>
-                <source srcset="images/helado550.jpg" media="(max-width: 526px)">
-                <source srcset="images/helado800.jpg" media="(max-width: 830px)">
-                <img src="images/helado500.jpg" alt="Argentina's Traditional IceCream">
+                <source srcset="images/helado550.webp" media="(max-width: 526px)">
+                <source srcset="images/helado800.webp" media="(max-width: 830px)">
+                <img src="images/helado500.webp" alt="Argentina's Traditional IceCream">
             </picture>
             <div id="newrelease" class="positionchild">
                 <h3>New <b>Traditional Ice Cream</b> Shop</h3>
@@ -96,9 +96,9 @@
         <section>
             <div class="positionparent">
                 <picture>
-                    <source srcset="images/mate550.jpg" media="(max-width: 526px)">
+                    <source srcset="images/mate550.webp" media="(max-width: 526px)">
                     <source srcset="images/mate400.jpg" media="(max-width: 830px)">
-                    <img src="images/mate250.jpg" alt="Argentine Milanese" id="imgspotligth">
+                    <img src="images/mate250.jpg" alt="Argentine Milanese" class="imgspotligth">
                 </picture>
                 <div class="spotligth positionchild">
                     <div>
@@ -111,7 +111,11 @@
                 </div>
             </div>
             <div class="none positionparent">
-                <img src="images/futbol250.jpg" alt="Futbol Stadium" id="imgspotligth">
+                <picture>
+                    <source srcset="#" media="(max-width: 526px)">
+                    <source srcset="#" media="(max-width: 830px)">
+                    <img src="images/futbol250.jpg" alt="Futbol Stadium" class="imgspotligth">
+                </picture>
                 <div class="spotligth positionchild">
                     <div>
                         <h3>Futbol match</h3>
@@ -126,7 +130,7 @@
                 <picture>
                     <source srcset="images/subte550.webp" media="(max-width: 526px)">
                     <source srcset="images/subte400.jpg" media="(max-width: 830px)">
-                    <img src="images/subte250.jpg" alt="spotligth image" id="imgspotligth">
+                    <img src="images/subte250.jpg" alt="Subte in Argentina" class="imgspotligth">
                 </picture>
                 <div class="spotligth positionchild">
                     <div>
@@ -141,11 +145,12 @@
         </section>
         <section class="none positionparent">
             <picture>
-                <source srcset="images/avcorrientes800.jpg" media="(max-width: 830px)">
+                <source srcset="#" media="(max-width: 526px)">
+                <source srcset="images/avcorrientes800.webp" media="(max-width: 830px)">
                 <img src="images/avcorrientes250.jpg" alt="Corrientes Avenue at nigth">
             </picture>
             <div id="joinusbanner" class="positionchild">
-                <button class="joinus" type="button"><a href="join.html">Join us now!</a></button>
+                <a href="join.html" class="joinus">Join us now!</a>
                 <div>
                     <a href="http://facebook.com" target="_blank"><img src="images/facebook.png" alt="Facebook Icon"></a>
                     <a href="http://linkedin.com" target="_blank"><img src="images/linkedin.png" alt="Linkedin Icon"></a>
