--- a/chamber/contactthankyou.html
+++ b/chamber/contactthankyou.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Directory | BA Chamber of Commerce</title>
+    <title>Thank You | BA Chamber of Commerce</title>
     <meta name="description"
-        content="Directory of the Chamber of Commerce. It will contain a list of the imformation of the business affiliated with the Chamber.">
+        content="Confirmation page after submiting the for to Join the Chamber">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="styles/base.css">
@@ -35,9 +35,9 @@
             </div>
             <nav>
                 <ul class="navigation">
-                    <li><a id="menu"></a></li>
+                    <li><a id="menu" href="#"></a></li>
                     <li><a href="discover.html">Discover</a></li>
-                    <li><a href="directory.html"><b>Directory</b></a></li>
+                    <li><a href="directory.html">Directory</a></li>
                     <li><a href="join.html">Join</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -45,12 +45,12 @@
             <p id="date"></p>
         </div>
     </header>
-    <main id="directory">
-        <h2>Business Directory</h2>
-        <button id="directory-button">List</button>
-        <article class="directory-grid" id="directory-display"></article>
+    <main id="thankyou">
+        <h2>Thank you for your comment / question.</h2>
+        <p>We will contact you shortly!</p>
+        <p>Return to <a href="index.html">Home Page</a></p>
     </main>
-    <footer>
+    <footer id="thankyou-footer">
         <div id="footer-grid">
             <img src="images/ba-logo.webp" alt="Buenos Aires Chamber of Commerce Logo">
             <div>   
@@ -72,7 +72,6 @@
         </div>
     </footer>
     <script src="scripts/main.js"></script>
-    <script src="scripts/directory.js"></script>
 </body>
 
 </html>
