--- a/chamber/index.html
+++ b/chamber/index.html
@@ -39,7 +39,7 @@
                     <li><a href="discover.html">Discover</a></li>
                     <li><a href="directory.html">Directory</a></li>
                     <li><a href="join.html">Join</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
             <p id="date"></p>
@@ -98,48 +98,30 @@
                 <picture>
                     <source srcset="images/mate550.webp" media="(max-width: 526px)">
                     <source srcset="images/mate400.jpg" media="(max-width: 830px)">
-                    <img src="images/mate250.jpg" alt="Argentine Milanese" class="imgspotligth">
+                    <img src="images/mate250.jpg" alt="Argentine Milanese" class="imgspotlight">
                 </picture>
-                <div class="spotligth positionchild">
-                    <div>
-                        <h3>Yerba Mate</h3>
-                        <p>Don't forget to buy some.</p>
-                        <hr>
-                        <a href="#" class="info">YerbaMate@gmail.com</a>
-                        <a href="#" class="info">LaTranquera.com</a>
-                    </div>
+                <div class="spotlight positionchild">
+                    <div id="gold1"></div>
                 </div>
             </div>
             <div class="none positionparent">
                 <picture>
                     <source srcset="#" media="(max-width: 526px)">
                     <source srcset="#" media="(max-width: 830px)">
-                    <img src="images/futbol250.jpg" alt="Futbol Stadium" class="imgspotligth">
+                    <img src="images/futbol250.jpg" alt="Futbol Stadium" class="imgspotlight">
                 </picture>
-                <div class="spotligth positionchild">
-                    <div>
-                        <h3>Futbol match</h3>
-                        <p>Visit different stadiums.</p>
-                        <hr>
-                        <a href="#" class="info">FutbolArg@gmail.com</a>
-                        <a href="#" class="info">FutbolParaTodos</a>
-                    </div>
+                <div class="spotlight positionchild">
+                    <div id="silver"></div>
                 </div>
             </div>
             <div class="positionparent">
                 <picture>
                     <source srcset="images/subte550.webp" media="(max-width: 526px)">
                     <source srcset="images/subte400.jpg" media="(max-width: 830px)">
-                    <img src="images/subte250.jpg" alt="Subte in Argentina" class="imgspotligth">
+                    <img src="images/subte250.jpg" alt="Subte in Argentina" class="imgspotlight">
                 </picture>
-                <div class="spotligth positionchild">
-                    <div>
-                        <h3>Don't lose your way!</h3>
-                        <p>Buses, Subway, Taxi</p>
-                        <hr>
-                        <a href="#" class="info">MoveBA@gmail.com</a>
-                        <a href="#" class="info">MoveBA.com</a>
-                    </div>
+                <div class="spotlight positionchild">
+                    <div id="gold2"></div>
                 </div>
             </div>
         </section>
@@ -181,6 +163,7 @@
     </footer>
     <script src="scripts/main.js"></script>
     <script src="scripts/windchill.js"></script>
+    <script src="scripts/spotlight.js"></script>
 </body>
 
 </html>
