Join page require inputs sign added

--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div id="top-banner">
-            <p>Come join us for the Chamber meet and greet Wednesday at 7:00 p.m.</p>
+            <p>Come <a href="/chamber/join.html">join us</a> for the Chamber meet and greet Wednesday at 7:00 p.m.</p>
         </div>
         <div id="header-grid">
             <a href="index.html"><img src="images/ba-logo.webp" alt="Buenos Aires Chamber of Commerce Logo" id="nav-logo"></a>
@@ -56,11 +56,11 @@
             <h3>Send us a question or comment below.</h3>
             <form action="contactthankyou.html" method="get">
                 <label for="name-company">
-                    Name/Company
+                    Name/Company*
                     <input type="text" name="name-company" id="name-company" required>
                 </label>
                 <label for="email">
-                    Email
+                    Email*
                     <input type="email" name="email" id="email" placeholder="someone@else.com" required>
                 </label>
                 <label for="tel">
@@ -68,7 +68,7 @@
                     <input type="tel" name="tel" id="tel">
                 </label>
                 <label for="comment">
-                    Comment/Question
+                    Comment/Question*
                     <textarea name="comment" id="comment" cols="30" rows="10" placeholder="Write here..." required></textarea>
                 </label>
                 <input type="submit" value="Send it">
