--- a/chamber/index.html
+++ b/chamber/index.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div id="top-banner">
-            <p>Come <a href="/chamber/join.html">join</a> us for the Chamber meet and greet Wednesday at 7:00 p.m.</p>
+            <p>Come <a href="/chamber/join.html">join us</a> for the Chamber meet and greet Wednesday at 7:00 p.m.</p>
         </div>
         <div id="header-grid">
             <a href="index.html"><img src="images/ba-logo.webp" alt="Buenos Aires Chamber of Commerce Logo" id="nav-logo"></a>
