Bountiful Foods Page finished

--- a/BountifulFoods/aboutus.html
+++ b/BountifulFoods/aboutus.html
@@ -40,8 +40,33 @@
         </nav>
     </header>
 
-    <main id="">
-        <br><br><br><br><br><br><br><br><br><br><br>
+    <main id="about-us">
+        <div id="about-us-images">
+            <picture>
+                <source srcset="images/carlsbadsmall.webp" media="(max-width: 620px)">
+                <img src="images/carlsbadlarge.webp" alt="Carlsbad Sign" loading="lazy">
+            </picture>
+            <picture>
+                <source srcset="#" media="(max-width: 620px)">
+                <img src="images/carlsbad-beach-large.webp" alt="Carlsbad Beach" loading="lazy">
+            </picture>
+        </div>
+        <div id="about-us-description">
+            <h3>Our History</h3>
+            <p>A group of 5 friends back in 2015 was trying to promote a healty and tasty life. So fruits and drinks business was proposed.
+                Since that, our mission is to give you the best flavors of nature. Our fresh drinks, added to the beautiful view and nature
+                 in Carlsbad and in all the California coast is a needed experience. And also a must share!
+            </p>
+        </div>
+        <div id="contact-info">
+            <h3>Find Us!</h3>
+            <p>Carlsbad, California</p>
+            <a href="#">info@bfoods.org</a>
+            <a href="tel:+">+(485) 2584-8452</a>
+        </div>
+        <div id="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d106928.86080965448!2d-117.287802!3d33.12151955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc73453f3bee59%3A0xa4cb5592fcf65d2f!2sCarlsbad%2C%20California!5e0!3m2!1ses-419!2sus!4v1680716347104!5m2!1ses-419!2sus" width="800" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </main>
 
     <footer>
